2015-07-18: Ver. 0.2-5
  * Several changes.

2015-07-05: Ver. 0.2-5
  * Add logit post I information.

2015-03-07: Ver. 0.2-5
  * Fix typos and problems of new version of R.
  * Change lmt options.

2013-01-13: Ver. 0.2-5
  * Fix more lmt and ppcontour plotting bugs.

2013-01-03: Ver. 0.2-5
  * Add and test lmt and ppcontour.

2013-12-14: Ver. 0.2-4
  * Move vignettes.

2013-07-02: Ver. 0.2-4
  * Fix variance2LTSigma for 1 dimension case.

2013-01-30: Ver. 0.2-3
  * Fix man page authorship typos.
  * Fix uninitialed variables problem.

2012-12-23: Ver. 0.2-2
  * Fix .Last.load problem.

2012-12-06: Ver. 0.2-1
  * Fix authorship typos.

2012-12-05: Ver. 0.2-0
  * Add man, vignette, and all required files for CRAN.

======================= Log for C Code =====================================
* All Dr. Maitra's codes are kept in the original files and names.
* Some original functions are modified inside the original files
  with same function names.
* Some extra functions are extended and saved separately.
* All generic functions are stored in files with function's name and
  aheaded with "M_".
* All R call function are stored in files with function's name and
  aheaded with "R_".
* All semi-supervised clustering are stored in files with function's name and
  adheaded with "ss_".
* Header files "mb_tool.h" and "ss_mb_tool.h" collect major functions except
  files and functions aheaded with "R_".
* All functions with counting iterations and times in files with function's
  name and adheaded with "it_".

Modifiled: Wei-Chen Chen on 2009/04/27.


======================= Log Before Release =====================================
2010-05-07: Ver. 0.1-18
  * Add checks in decreasing logL.

2009-08-18: Ver. 0.1-17
  * Add adapted candidated initializations.

2009-06-17: Ver. 0.1-16
  * Rewrite EM step to ME step.

2009-06-09: Ver. 0.1-15
  * Add clock ticks.
  * Rewrite emobj in C structure.

2009-03-17: Ver. 0.1-14
  * Fix possible bugs in semi-supervise clustering methods.
